<resources>
    <string name="app_name">MySelfApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="gallery">Gallery</string>
    <string name="music_and_video">Music and Video</string>
    <string name="profile">Profile</string>
    <string name="rebarxd">RebarXd</string>
    <string name="rebarxd_juniorandroid_com">rebarxd@juniorandroid.com</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="daily_fragment">Daily Fragment</string>
    <string name="gallery_fragment">Gallery Fragment</string>
    <string name="music_fragment">Music Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="description_profile">Mahasiswa Ilmu Komputer tahun ketiga di Universitas Komputer Indonesia dengan minat yang kuat pada Analisis Data, Visualisasi Data, dan Pembelajaran Mesin. Memiliki kemampuan manajemen proyek dan kerja sama tim yang telah terbukti melalui berbagai proyek. Tertarik untuk menerapkan keterampilan analitis dan teknis dalam peran berbasis data.</string>
    <string name="interest">Interest</string>
    <string name="hobby">Hobby: Menonton Pertandingan Esports</string>
    <string name="makes">Makes: Data/Article tentang esports</string>
    <string name="mikes_analyst_esport_games">Mikes: Analis esport games</string>
    <string name="interest_data_analyst">Interest: Data Analyst</string>
    <string name="dream">Cita-cita: Analyst pada suatu organisasi esport</string>
    <string name="friends_list">Friends List</string>
    <string name="contact">Contact</string>
    <string name="friendlist">Friendlist</string>
    <string name="item">Item</string>
    <string name="favorite">Favorite</string>
    <string name="top_5_music_favorite">Top 5 music favorite</string>
    <string name="contact_information">contact information</string>
    <string name="no_telepon">no telepon</string>
    <string name="gmail">gmail</string>
    <string name="rebarxd_gmail_com">rebarxd@gmail.com</string>
    <string name="whatsapp">whatsapp</string>
    <string name="instagram">instagram</string>
    <string name="rebar9xd">rebar9xd</string>
    <string name="findme">findme</string>
    <string name="about">about</string>
    <string name="version_1_0_0">version 1_0_0</string>
    <string name="kotlin">Kotlin</string>
    <string name="by_rebarxd">By: RebarXd</string>
    <string name="rebar69xd">rebar69xd</string>


</resources>