<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_nav"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_daily"
            android:icon="@drawable/daily_nav"
            android:title="@string/daily_activity"/>

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gallery_nav"
            android:title="@string/gallery"/>

        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/music_nav"
            android:title="@string/music_and_video"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile_nav"
            android:title="@string/profile"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/exit_nav"
                android:title="Exit"/>
        </menu>

    </item>

</menu>