<?xml version="1.0" encoding="utf-8"?>
<!--10121282 REZA A MARDIANSYAH
    PEM-ANDRO-3
    9 JUNI 2024
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Profile Section -->
        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <ImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/profile_picture"
            android:background="@drawable/rounded_image" />

        <TextView
            android:id="@+id/tvProfileDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_profile"
            android:paddingBottom="32dp"
            android:textSize="16sp" />

        <!-- Interest Section -->
        <TextView
            android:id="@+id/tvInterestTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="16dp" />

        <TextView
            android:id="@+id/tvHobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobby"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvMakes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/makes"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvMikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mikes_analyst_esport_games"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_data_analyst"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCitaCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dream"
            android:paddingBottom="8dp"
            android:textSize="16sp" />
    </LinearLayout>
</ScrollView>
